--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <img class='board' src="image/dualmain.png" alt=""> <!-- スコアボードのデザインの画像 -->
-  <div class="dual_logobox"><img src="image/logo.png" alt="" class="dual_logo"></div><!-- 大会ロゴ なしの場合はクラスにdisableを追加 -->
+  <div class="dual_logobox"><img src="image/logo.png" alt="" class="dual_logo disable"></div><!-- 大会ロゴ なしの場合はクラスにdisableを追加 -->
   <p id="dual_numberleft"></p> <!-- 1Pスコア -->
   <p id="dual_numberright"></p> <!-- 2Pスコア -->
   <p class="dual_player" id="dual_playerleft"><span id="dual_teamleft"></span><span id="dual_nameleft"></span></p>
