--- a/single.html
+++ b/single.html
@@ -14,7 +14,7 @@
 
 <body>
   <img class='board' src="image/singlemain.png" alt=""> <!-- スコアボードのデザインの画像 -->
-  <div class="single_logobox"><img src="image/logo.png" alt="" class="single_logo"></div><!-- 大会ロゴ なしの場合はクラスにdisableを追加 -->
+  <div class="single_logobox"><img src="image/logo.png" alt="" class="single_logo disable"></div><!-- 大会ロゴ なしの場合はクラスにdisableを追加 -->
   <p id="single_numberleft"></p> <!-- 1Pスコア -->
   <p id="single_numberright"></p> <!-- 2Pスコア -->
   <p class="single_player" id="single_playerleft"><span id="single_teamleft"></span><span id="single_nameleft"></span></p>
