--- a/single.html
+++ b/single.html
@@ -14,12 +14,6 @@
 
 <body>
   <img class='board' src="image/singlemain.png" alt=""> <!-- スコアボードのデザインの画像 -->
-  <div class="camera_setting">
-    <!-- カメラ設定 なしの場合はクラスにdisableを追加 -->
-    <img class="board" src="image/camera.png" alt=""><!-- カメラレイアウトのデザインの画像 -->
-    <p id="camera_left"></p>
-    <p id="camera_right"></p>
-  </div>
   <div class="single_logobox"><img src="image/logo.png" alt="" class="single_logo disable"></div><!-- 大会ロゴ なしの場合はクラスにdisableを追加 -->
   <p id="single_numberleft"></p> <!-- 1Pスコア -->
   <p id="single_numberright"></p> <!-- 2Pスコア -->
@@ -31,34 +25,80 @@
   </div>
 </body>
 <script>
-//ローカルのjsonもしくはGASのAPIのURL（Google Spreadsheetを使う場合は各自変更してください。）
-const endpoint = "localscore.json";
-
-
-//APIを使って非同期データを取得する
-function remoteScore() {
-  const xhr = new XMLHttpRequest();
-  xhr.open("GET", endpoint);
-  xhr.send();
-  xhr.onreadystatechange = function() {
-    //JSONから配列に変換
-    const data = JSON.parse(xhr.response);
-    console.log(data);
-    document.getElementById("single_numberleft").innerHTML = data[0]['score'];
-    document.getElementById("single_nameleft").innerHTML = data[0]['name'];
-    document.getElementById("single_teamleft").innerHTML = data[0]['team'];
-    document.getElementById("single_prtextleft").innerHTML = data[0]['status'];
-    document.getElementById("single_numberright").innerHTML = data[1]['score'];
-    document.getElementById("single_nameright").innerHTML = data[1]['name'];
-    document.getElementById("single_teamright").innerHTML = data[1]['team'];
-    document.getElementById("single_prtextright").innerHTML = data[1]['status'];
-    document.getElementById("camera_left").innerHTML = data[0]['id'];
-    document.getElementById("camera_right").innerHTML = data[1]['id'];
-    //inputタグそれぞれに取得したデータを設定
-  }
+// 設定の反映
+const applySetting = data => {
+  document.querySelector(".board").src = "./image/scoreboards/" + data.style;
 }
-remoteScore();
-window.setInterval(remoteScore, 5000);
+// データの反映
+const applyScore = data => {
+  document.getElementById("single_numberleft").innerHTML = data[0]['score'];
+  document.getElementById("single_nameleft").innerHTML = data[0]['name'];
+  document.getElementById("single_teamleft").innerHTML = data[0]['team'];
+  document.getElementById("single_prtextleft").innerHTML = data[0]['status'];
+  document.getElementById("single_numberright").innerHTML = data[1]['score'];
+  document.getElementById("single_nameright").innerHTML = data[1]['name'];
+  document.getElementById("single_teamright").innerHTML = data[1]['team'];
+  document.getElementById("single_prtextright").innerHTML = data[1]['status'];
+  document.getElementById("single_option").innerHTML = data[0]['option'];
+}
 </script>
+<script type="module">
+import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.8.1/firebase-app.js'
 
+import { getDatabase, ref, onValue } from 'https://www.gstatic.com/firebasejs/9.8.1/firebase-database.js'
+
+// クエリパラメータから ID を取得する
+const params = new URLSearchParams(location.search);
+const id = params.get("id");
+
+if (id && id !== "") {
+  // Firebase 設定（公開してもよい）
+  const firebaseConfig = {
+    apiKey: "AIzaSyD-Nzhi2nzBgFhoK44B_bnKefnuEXGqgow",
+    authDomain: "bracebracket-24d9f.firebaseapp.com",
+    databaseURL: "https://bracebracket-24d9f-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "bracebracket-24d9f",
+    storageBucket: "bracebracket-24d9f.appspot.com",
+    messagingSenderId: "844635716199",
+    appId: "1:844635716199:web:afe5e7c533f2604878b2c2"
+  };
+
+  // Firebase の初期化
+  const app = initializeApp(firebaseConfig);
+  const db = getDatabase(app);
+
+  // Firebase Realtime DB からの変更をリッスンする
+  const settingRef = ref(db, "tournaments/" + id + "/setting");
+  const scoreRef = ref(db, "tournaments/" + id + "/score");
+  onValue(settingRef, (snapshot) => {
+    const data = snapshot.val();
+    console.log(data);
+    applySetting(data);
+  });
+
+  onValue(scoreRef, (snapshot) => {
+    const data = snapshot.val();
+    console.log(data);
+    applyScore(data);
+  });
+} else {
+  //ローカルのjsonもしくはGASのAPIのURL（Google Spreadsheetを使う場合は各自変更してください。）
+  const endpoint = "localscore.json";
+
+  //APIを使って非同期データを取得する
+  function remoteScore() {
+    const xhr = new XMLHttpRequest();
+    xhr.open("GET", endpoint);
+    xhr.send();
+    xhr.onreadystatechange = function() {
+      //JSONから配列に変換
+      const data = JSON.parse(xhr.response);
+      console.log(data);
+      applyScore(data);
+    }
+  }
+  remoteScore();
+  window.setInterval(remoteScore, 5000);
+}
+</script>
 </html>
