--- a/mc.html
+++ b/mc.html
@@ -32,7 +32,7 @@
 </body>
 <script>
 //ローカルのjsonもしくはGASのAPIのURL（Google Spreadsheetを使う場合は各自変更してください。）
-const endpoint = "https://script.google.com/macros/s/AKfycbzOmyvMmEm11lBI2TZeZ_PdK6P-xqz-Bsw8OWjmYgn7QRD62NunjEaUh_VFE1sQKMRZ-A/exec";
+const endpoint = "localscore.json";
 
 
 //APIを使って非同期データを取得する
