--- a/mcsimple.html
+++ b/mcsimple.html
@@ -24,11 +24,15 @@
     <p id="sp_id_one"></p>
     <p id="sp_mc_two"><span class="sp_mc_team" id="sp_mc_team_two"></span><span id="sp_mc_name_two" class="sp_mc_name"></span></p>
     <p id="sp_id_two"></p>
+    <p id="sp_mc_three"><span class="sp_mc_team" id="sp_mc_team_three"></span><span id="sp_mc_name_three" class="sp_mc_name"></span></p>
+    <p id="sp_id_three"></p>
+    <p id="sp_mc_four"><span class="sp_mc_team" id="sp_mc_team_four"></span><span id="sp_mc_name_four" class="sp_mc_name"></span></p>
+    <p id="sp_id_four"></p>
   </div>
 </body>
 <script>
 //ローカルのjsonもしくはGASのAPIのURL（Google Spreadsheetを使う場合は各自変更してください。）
-const endpoint = "https://script.google.com/macros/s/AKfycbzOmyvMmEm11lBI2TZeZ_PdK6P-xqz-Bsw8OWjmYgn7QRD62NunjEaUh_VFE1sQKMRZ-A/exec";
+const endpoint = "localscore.json";
 
 
 //APIを使って非同期データを取得する
@@ -43,23 +47,39 @@ function remoteMc() {
     //inputタグそれぞれに取得したデータを設定
     var mc1 = data[4]['name'];
     var mc2 = data[5]['name'];
+    var mc3 = data[6]['name'];
+    var mc4 = data[7]['name'];
     document.getElementById("sp_mc_name_one").innerHTML = mc1;
     document.getElementById("sp_mc_name_two").innerHTML = mc2;
+    document.getElementById("sp_mc_name_three").innerHTML = mc3;
+    document.getElementById("sp_mc_name_four").innerHTML = mc4;
     document.getElementById("sp_mc_team_one").innerHTML = data[4]['team'];
     document.getElementById("sp_mc_team_two").innerHTML = data[5]['team'];
+    document.getElementById("sp_mc_team_three").innerHTML = data[6]['team'];
+    document.getElementById("sp_mc_team_four").innerHTML = data[7]['team'];
     document.getElementById("sp_id_one").innerHTML = data[4]['id'];
     document.getElementById("sp_id_two").innerHTML = data[5]['id'];
-    if (!!mc2) {
+    document.getElementById("sp_id_three").innerHTML = data[6]['id'];
+    document.getElementById("sp_id_four").innerHTML = data[7]['id'];
+    if (!!mc4) {
+      document.querySelector('#sp_mc_background').style.backgroundImage = "url(image/MC_simple4.png)";
+      document.querySelector('.sp_mc_setting').classList.add("sp_mc4_layout");
+      document.querySelector('.sp_mc_setting').classList.remove("sp_mc3_layout", "sp_mc2_layout", "sp_mc1_layout");
+    } else if (!!mc3) {
+      document.querySelector('#sp_mc_background').style.backgroundImage = "url(image/MC_simple3.png)";
+      document.querySelector('.sp_mc_setting').classList.add("sp_mc3_layout");
+      document.querySelector('.sp_mc_setting').classList.remove("sp_mc4_layout", "sp_mc2_layout", "sp_mc1_layout");
+    } else if (!!mc2) {
       document.querySelector('#sp_mc_background').style.backgroundImage = "url(image/MC_simple2.png)";
       document.querySelector('.sp_mc_setting').classList.add("sp_mc2_layout");
-      document.querySelector('.sp_mc_setting').classList.remove("sp_mc1_layout");
+      document.querySelector('.sp_mc_setting').classList.remove("sp_mc4_layout", "sp_mc3_layout", "sp_mc1_layout");
     } else if (!!mc1) {
       document.querySelector('#sp_mc_background').style.backgroundImage = "url(image/MC_simple1.png)";
       document.querySelector('.sp_mc_setting').classList.add("sp_mc1_layout");
-      document.querySelector('.sp_mc_setting').classList.remove("sp_mc2_layout");
+      document.querySelector('.sp_mc_setting').classList.remove("sp_mc4_layout", "sp_mc3_layout", "sp_mc2_layout");
     } else if (!mc1) {
       document.querySelector('#sp_mc_background').style.backgroundImage = "none";
-      document.querySelector('.sp_mc_setting').classList.remove("sp_mc2_layout", "sp_mc1_layout");
+      document.querySelector('.sp_mc_setting').classList.remove("sp_mc4_layout", "sp_mc3_layout", "sp_mc2_layout", "sp_mc1_layout");
     }
   }
 }
